--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ a {
 
 /*Heading*/
 .jumbotron-extend {
-    background: url(../images/sea.jpg) fixed no-repeat center center;
+    background: url(../images/tokyo.jpg) fixed no-repeat center center;
     position: relative;
     height: 100vh;
     background-size: cover;
@@ -288,8 +288,7 @@ a {
     padding: 10% 0;
 }
 
-/*Particle*/
-
+/*Particlejs*/
 canvas{
     display: block; vertical-align: bottom;
 }
